<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_keyboard_backspace"
        tools:layout_editor_absoluteX="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:textSize="20sp"
                style="@style/Ignite.Tech.Widget.TextView.Social"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/profile_pic"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSilver"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/mark_lee"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:textColor="@color/colorGrey"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/human"
        app:layout_constraintStart_toEndOf="@+id/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:textColor="@color/colorGrey"
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/address"
        app:layout_constraintStart_toEndOf="@+id/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.button.MaterialButton
        style="@style/Ignite.Tech.Widget.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:padding="0dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="198dp" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Ignite.Tech.Widget.TextView.Social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/_1_2k"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:textColor="@color/colorGrey"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/youtube"
        android:gravity="center"
        android:text="@string/youtube"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:textColor="@color/colorGrey"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/facebook_box"
        android:gravity="center"
        android:text="@string/facebook"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Ignite.Tech.Widget.TextView.Social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_1_3k"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:textColor="@color/colorGrey"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/instagram"
        android:gravity="center"
        android:text="@string/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        style="@style/Ignite.Tech.Widget.TextView.Social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:text="@string/_4_5k"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <LinearLayout
        android:id="@+id/introduction_heading"
        android:background="#242424"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="-44dp">
        <TextView
            style="@style/Ignite.Tech.TextAppearance.Heading"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/introduction" />
        <com.google.android.material.button.MaterialButton
            style="@style/Ignite.Tech.Widget.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>
    </LinearLayout>

    <TextView
        android:layout_margin="2dp"
        android:padding="5dp"
        android:textColor="@color/colorGrey"
        android:id="@+id/introduction_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_text"
        app:layout_constraintTop_toBottomOf="@id/introduction_heading"/>
    <LinearLayout
        android:id="@+id/notification_heading"
        android:padding="5dp"
        android:background="#242424"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/introduction_text"
        tools:layout_editor_absoluteX="-44dp">
        <TextView
            style="@style/Ignite.Tech.TextAppearance.Heading"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/notification" />
        <TextView
            android:background="@drawable/curved_red_rect"
            android:padding="6dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"/>
        <ImageButton
            android:padding="4dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_keyboard_arrow_righ"/>
    </LinearLayout>

    <LinearLayout
    android:id="@+id/gallery_heading"
    android:padding="5dp"
    android:background="#242424"
    android:layout_marginTop="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@id/notification_heading"
    tools:layout_editor_absoluteX="-44dp">
    <TextView
        style="@style/Ignite.Tech.TextAppearance.Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery" />
</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery_rc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gallery_heading"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:listitem="@layout/gallery_rc_item"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>