<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="18dp"
    android:paddingEnd="18dp"
    android:id="@+id/root"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progressTint="@color/colorAccent"
        android:indeterminate="true"/>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"
        android:text="@string/login"
        android:fontFamily="@font/open_sans_semi_bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Ignite.Tech.Widget.TextInputLayout"
        android:id="@+id/email_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text"
        android:hint="@string/email_address">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/colorSilver"
            android:id="@+id/email_address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Ignite.Tech.Widget.TextInputLayout"
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_address_layout"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/colorSilver"
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:padding="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_your_password" />

    <TextView
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:textColor="@color/colorAccent"
        android:layout_toEndOf="@id/forgot_pass_txt"
        android:layout_below="@id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover"/>

        <LinearLayout
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/haven_t_registered"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorAccent"
                android:text="@string/click_here_to_register"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                app:cornerRadius="8dp"
                android:background="@drawable/gradient_rect"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"/>

        </LinearLayout>
</RelativeLayout>
</androidx.core.widget.NestedScrollView>